syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.event4u.systemevents.grpc";

service action{
  rpc logAction(Request) returns (APIResponse);
}

message Request{
  //google.protobuf.Timestamp timestamp = 1;
  string serviceName = 1 ;
  int64 userId = 2 ;
  enum ActionType {
      CREATE = 0;
      DELETE = 1;
      GET = 2;
      UPDATE = 3;
  }
  ActionType actionType = 3;
  string resourceName = 4;
}

message APIResponse{
  enum ResponseType {
    SUCCESS = 0;
    ERROR = 1;
  }
  string responseMessage = 1;
  ResponseType responseType = 2;
}